log.txt
ExecSQLtuples(): SQL command failed: SELECT pr.id, pr.descrizione, pr.nome, pr.prezzo, fr.nome AS nomeF FROM prodotto pr, fornitore fr WHERE pr.fornitore = fr.id
ExecSQLtuples(): PGRES_FATAL_ERROR



ricerca ordini trasportatore:
ExecSQLtuples(): SQL command failed: SELECT ord.id, cst.nome, ord.datarich, ord.stato, ord.pagamento, ord.indirizzo, ord.totale FROM Ordine ord, Customer cst WHERE cst.id = ord.customer AND ord.id NOT IN (SELECT id FROM ordineconse) AND ord.id NOT IN (SELECT ordine FROM consegna)
ExecSQLtuples(): PGRES_FATAL_ERROR




routes.cpp: In function ‘void defineRoutes(Pistache::Rest::Router&)’:
routes.cpp:10:38: error: invalid initialization of reference of type ‘Pistache::Rest::Router&’ from expression of type ‘const char [11]’
   10 |         Pistache::Rest::Routes::Post("/autentica", authenticateUser)
      |                                      ^~~~~~~~~~~~
In file included from routes.h:2,
                 from routes.cpp:1:
/usr/include/pistache/router.h:343:27: note: in passing argument 1 of ‘void Pistache::Rest::Routes::Post(Pistache::Rest::Router&, const std::string&, Pistache::Rest::Route::Handler)’
  343 |         void Post(Router& router, const std::string& resource, Route::Handler handler);
      |                   ~~~~~~~~^~~~~~
routes.cpp:15:38: error: invalid initialization of reference of type ‘Pistache::Rest::Router&’ from expression of type ‘const char [14]’
   15 |         Pistache::Rest::Routes::Post("/modificaNome", modificaNomeHttp)
      |                                      ^~~~~~~~~~~~~~~
/usr/include/pistache/router.h:343:27: note: in passing argument 1 of ‘void Pistache::Rest::Routes::Post(Pistache::Rest::Router&, const std::string&, Pistache::Rest::Route::Handler)’
  343 |         void Post(Router& router, const std::string& resource, Route::Handler handler);
      |                   ~~~~~~~~^~~~~~
make: *** [Makefile:39: ../obj/routes.o] Errore 1

